--- a/templet.html
+++ b/templet.html
@@ -36,7 +36,7 @@
  
     <header class="px-5">
         <nav class="container mx-auto my-5">
-            <div class="navbar lg:bg-[#F85559] rounded-full flex-row-reverse lg:flex-row justify-between lg:py-5 lg:px-14  ">
+            <div class="navbar lg:bg-[#F85559] rounded-full flex-row-reverse lg:flex-row justify-between lg:py-5  ">
                 <div class="">
                   <div class="dropdown flex justify-end">
                     <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -67,7 +67,7 @@
                  </div>
                
                 <div class=" hidden lg:flex  ">
-                    <div class=" flex items-center input        " >
+                    <div class=" flex items-center input input-bordered       " >
                         <input type="text" placeholder="Search" class="  w-24 md:w-auto" />
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
 
