--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     </div> 
                     <div class="flex flex-col">
                       <span class="countdown font-mono text-5xl">
-                        <span style="--value:24;"></span>:
+                        <span style="--value:24;"></span>
                       </span>
                       sec
                     </div>
